# Little-Racket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  debug.sh  install.sh  test.sh
include/: addon.h  custom_handler.h  debug.h  global.h  interpreter.h  load_racket_file.h  parser.h  racket_built_in.h  tokenizer.h  vector.h
src/: addon.c  custom_handler.c  custom_handler.h  debug.c  interpreter.c  interpreter.h  linked_list.c  linked_list.h  load_racket_file.c  load_racket_file.h  main.c  parser.c  racket_built_in.c  racket_built_in.h  tokenizer.c  vector.c  vector.h
test/: and.test.rkt  built-in-binding.test.rkt  calling.test.rkt  car.test.rkt  cdr.test.rkt  complex-example.rkt  cond.test.rkt  define-lambda.test.rkt  define.test.rkt  fact.test.rkt  fib.test.rkt  filter.test-1.rkt  filter.test.rkt  is-list.test-1.rkt  is-list.test-2.rkt  is-list.test-error.rkt  is-list.test.rkt  is-pair.test-1.rkt  let*.test.rkt  let.test.rkt  letrec.test.rkt  list.test.rkt  map-error.test.rkt  map.test-1.rkt  map.test-2.rkt  map.test.rkt  negative-number.test.rkt  non-argu-fn-call.test.rkt  not.test.rkt  null-empty.test.rkt  number-equal.test-1.rkt  number-equal.test-2.rkt  number-equal.test-3.rkt  number-equal.test.rkt  number-less-or-equal-than.test.rkt  number-less-than.test.rkt  number-more-or-equal-than.test.rkt  number-more-than.test-1.rkt  number-more-than.test-2.rkt  number-more-than.test-3.rkt  (+10 more)
